Fixed wrapping issues

--- a/app/assets/stylesheets/availability_chart.css.scss
+++ b/app/assets/stylesheets/availability_chart.css.scss
@@ -3,6 +3,10 @@
 		width: auto;
 	}
 
+	table td:nth-child(1) {
+		white-space: nowrap;
+	}
+
 	.property {
 		background: #CFCFCF;
 		font-weight: bold;
